Make server work with qb-core and mysql started

--- a/local.cfg
+++ b/local.cfg
@@ -11,3 +11,5 @@ sv_master1 ""
 
 # Limit to 16 players by default
 sv_maxclients 16
+
+set mysql_connection_string "mysql://soz:soz@soz_database/soz?charset=utf8mb4"
