--- a/server.cfg
+++ b/server.cfg
@@ -24,9 +24,15 @@ setr voice_defaultVolume 0.3
 setr voice_enableRadioAnim 1
 setr voice_syncData 1
 
-# QBCore & Extra stuff
+# 1. Mysql
+start oxmysql
 
-start [priority]
+# 2. Migration
+
+# Qbcore
+start qb-core
+
+# Extra stuff
 #start [standalone]
 #start [qb]
 #start [voice]
