Add mapping directories

--- a/server.cfg
+++ b/server.cfg
@@ -7,15 +7,6 @@ endpoint_add_udp "0.0.0.0:30120"
 exec local.cfg
 exec env.cfg
 
-# Resources used by the server
-start mapmanager
-start chat
-start spawnmanager
-start sessionmanager
-start basic-gamemode
-start hardcap
-start rconlog
-
 # Voice config
 setr voice_useNativeAudio true
 setr voice_useSendingRangeOnly true
@@ -24,22 +15,8 @@ setr voice_defaultVolume 0.3
 setr voice_enableRadioAnim 1
 setr voice_syncData 1
 
-# 1. Mysql
-start oxmysql
-
-# 2. Migration
-
-# Qbcore
-start qb-core
-
-# Extra stuff
-#start [standalone]
-#start [qb]
-#start [voice]
-#start [mapping]
-#start [notyetused]
-#start [notused]
-
+# Load modules
+exec modules.cfg
 
 # Disallow players to use scripthook-based plugins such as the legacy Lambda Menu..
 sv_scriptHookAllowed 0
