feat(inventory): add inventory logic
Former-commit-id: 6f5b1e2d7305b23958346887931d3355b981db98

--- a/modules-prod.cfg
+++ b/modules-prod.cfg
@@ -17,6 +17,7 @@ start mysql-migration
 start qb-core
 start soz-hud
 start soz-personal-menu
+start soz-inventory
 start soz-map
 start soz-extras
 start qb-clothing
