feat(vehicle): move seatbelt and noshuff into vehicle resource
Former-commit-id: 3ed8c930b03b8a8c920628071cebbc6ddd3e7075

--- a/modules-prod.cfg
+++ b/modules-prod.cfg
@@ -20,6 +20,7 @@ start soz-personal-menu
 start soz-inventory
 start soz-map
 start soz-extras
+start soz-vehicle
 start qb-clothing
 start qb-spawn
 start soz-animations
