Add default version of spawn to build on it, will be removed later
Former-commit-id: 132301b44101e86ee0ae3da1a93f9a38a4343b74

--- a/modules-prod.cfg
+++ b/modules-prod.cfg
@@ -19,6 +19,10 @@ start soz-hud
 start soz-personal-menu
 start soz-map
 start soz-extras
+start qb-clothing
+start qb-spawn
+start soz-animations
+start qb-multicharacter
 
 # Mapping
 start mapping-prod
