feat:admin:tpm/noclip
Former-commit-id: cbd3a8519e98a8c5114c6aac9fba0966a8a54b36

--- a/local.cfg
+++ b/local.cfg
@@ -5,9 +5,13 @@
 sv_hostname "SOZ Dev"
 sets sv_projectName "SOZ Dev"
 sets sv_projectDesc "SOZ Dev server"
+set sv_licenseKey "cfxk_LM2OhOOuYGkEmgnPNKFW_gQhVm"
 
 # Do not show the server in listing by default
 sv_master1 ""
+
+start chat
+start soz-admin
 
 # Limit to 16 players by default
 sv_maxclients 16
