Simple weather sync
Former-commit-id: 95940c127b3d6c99b1a1c89c3966496e49193a42

--- a/modules-prod.cfg
+++ b/modules-prod.cfg
@@ -28,6 +28,7 @@ start qb-clothing
 start qb-spawn
 start soz-animations
 start qb-multicharacter
+start soz-weather
 
 # Mapping
 start mapping-prod
