--- a/server.cfg
+++ b/server.cfg
@@ -36,6 +36,7 @@ add_ace group.admin command.quit deny # but don't allow quit
 add_principal identifier.fivem:1 group.admin # add the admin to the group
 
 add_principal identifier.license:dd4b67c37f21ceea7a5907d2b87f932e8d7466ff group.admin #DarkEagl
+add_principal identifier.license:334404ad0466ea9854cfcfe4dff3af2ad374754c group.admin #Brouznouf
 
 # enable OneSync (required for server-side state awareness)
 set onesync on
