--- a/modules-prod.cfg
+++ b/modules-prod.cfg
@@ -25,10 +25,9 @@ start soz-inventory
 start soz-map
 start soz-extras
 start soz-vehicle
-start qb-clothing
-start qb-spawn
+start cui_character
 start soz-animations
-start qb-multicharacter
+start soz-character
 start soz-weather
 
 # Mapping
