--- a/local.cfg
+++ b/local.cfg
@@ -2,7 +2,7 @@
 # if you need to change something in another env than docker override the value in the env.cfg file
 
 # Set server names and description
-sv_hostname "SOZ Dev"
+sv_hostname "En développement."
 sets sv_projectName "SOZ Dev"
 sets sv_projectDesc "SOZ Dev server"
 
