feat(phone): create phone base database
Former-commit-id: c8003aaecff6d9908df0bd27faf83d1f81a72bb8

--- a/lib/npwd/config.json
+++ b/lib/npwd/config.json
@@ -26,8 +26,8 @@
     "returnedDataIndexes": ["data", "link"]
   },
   "debug": {
-    "level": "silly",
+    "level": "info",
     "enabled": true,
-    "sentryEnabled": true
+    "sentryEnabled": false
   }
 }
