--- a/lib/npwd/resources/package.json
+++ b/lib/npwd/resources/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.4",
     "dayjs": "^1.10.7",
     "fivem-js": "^1.3.1",
+    "luaparse": "^0.3.1",
     "md5": "^2.3.0",
     "mysql2": "^2.3.3",
     "uuid": "^8.3.2",
