--- a/modules-test.cfg
+++ b/modules-test.cfg
@@ -4,6 +4,9 @@ exec modules-prod.cfg
 # Mapping
 start [mapping-test]
 
+# Vehicles
+start [vehicles-test]
+
 # 3rd_eye 
 start qb-target
 start soz-admin
