--- a/lib/npwd/config.json
+++ b/lib/npwd/config.json
@@ -1,8 +1,8 @@
 {
   "PhoneAsItem": {
-    "enabled": false,
-    "exportResource": "my-core-resource",
-    "exportFunction": "myCheckerFunction"
+    "enabled": true,
+    "exportResource": "soz-inventory",
+    "exportFunction": "hasPhone"
   },
   "general": {
     "toggleKey": "L",
