feat(money): display moneycase when player has more than $5k
Former-commit-id: 0f91f3123f69f1d3d23517e01c64247ac04d5120

--- a/modules-prod.cfg
+++ b/modules-prod.cfg
@@ -19,18 +19,21 @@ start soz-monitor
 
 # Qbcore
 start qb-core
-start qb-target
-#start npwd
+start cui_character
+
+# SOZ
 start soz-character
 start soz-hud
 start soz-personal-menu
 start soz-inventory
+start soz-money
 start soz-map
 start soz-extras
 start soz-vehicle
-start cui_character
 start soz-animations
 start soz-weather
+
+start npwd
 
 # Mapping
 start bob74
