feat(bank): add ped to open bank menu
Former-commit-id: e4790611732e7f7506a14a28ffe52baf1354142d

--- a/modules-prod.cfg
+++ b/modules-prod.cfg
@@ -26,7 +26,7 @@ start soz-character
 start soz-hud
 start soz-personal-menu
 start soz-inventory
-start soz-money
+start soz-bank
 start soz-map
 start soz-extras
 start soz-vehicle
