--- a/modules-prod.cfg
+++ b/modules-prod.cfg
@@ -19,7 +19,8 @@ start soz-monitor
 
 # Qbcore
 start qb-core
-start npwd
+start qb-target
+#start npwd
 start soz-character
 start soz-hud
 start soz-personal-menu
