--- a/local.cfg
+++ b/local.cfg
@@ -12,8 +12,6 @@ sv_master1 ""
 # Limit to 16 players by default
 sv_maxclients 16
 
-set mysql_connection_string "server=localhost;database=soz;userid=root;"
+set mysql_connection_string "mysql://soz:soz@soz_database/soz?charset=utf8mb4"
 set mysql_slow_query_warning 150
 set mysql_debug true
-
-set sv_licenseKey cfxk_LM2OhOOuYGkEmgnPNKFW_gQhVm
