feat(phone): global redesign fixes
Former-commit-id: 9b37c0f9ea2bf30c5c751d5ce624d8dbbef1f971

--- a/lib/npwd/config.json
+++ b/lib/npwd/config.json
@@ -26,7 +26,7 @@
     "returnedDataIndexes": ["data", "link"]
   },
   "debug": {
-    "level": "info",
+    "level": "warn",
     "enabled": false,
     "sentryEnabled": false
   }
