feat(phone): global redesign for notifications
Former-commit-id: d10ceea594704aaf5ed74a3c9d2afb66e9c1514c

--- a/lib/npwd/config.json
+++ b/lib/npwd/config.json
@@ -17,7 +17,7 @@
     "phoneNumberColumn": "phone_number"
   },
   "images": {
-    "url": "https://api.imgur.com/3/image",
+    "url": "https://images.gorp.link/",
     "type": "imgur",
     "imageEncoding": "jpg",
     "contentType": "multipart/form-data",
