--- a/lib/npwd/phone/package.json
+++ b/lib/npwd/phone/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@headlessui/react": "^1.4.3",
     "@mui/icons-material": "^5.2.0",
     "@mui/lab": "^5.0.0-alpha.45",
     "@mui/material": "^5.2.1",
@@ -46,9 +47,12 @@
     "@types/react-router-dom": "^5.3.2",
     "@welldone-software/why-did-you-render": "^6.2.3",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "autoprefixer": "^10.4.2",
     "craco-alias": "^3.0.1",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18",
     "ts-loader": "^8.3.0",
     "typescript": "^4.5.2"
   },
