feat(phone): apply some little fixes
Former-commit-id: 00526dbb384a56d3c093afdcd65a2b5f34d8efa8

--- a/lib/npwd/config.json
+++ b/lib/npwd/config.json
@@ -26,8 +26,8 @@
     "returnedDataIndexes": ["data", "link"]
   },
   "debug": {
-    "level": "warn",
-    "enabled": false,
-    "sentryEnabled": false
+    "level": "info",
+    "enabled": true,
+    "sentryEnabled": true
   }
 }
