feat(phone): add switch between dark and light mode
Former-commit-id: 3cac94d484ae1846f385f4cc6aff8e19f29cc014

--- a/lib/npwd/config.json
+++ b/lib/npwd/config.json
@@ -27,7 +27,7 @@
   },
   "debug": {
     "level": "info",
-    "enabled": true,
-    "sentryEnabled": true
+    "enabled": false,
+    "sentryEnabled": false
   }
 }
