feat(phone): rename resource from npwd to soz-phone
Former-commit-id: c62188663640dce0edc8d95a879a6e1a2aa27d56

--- a/lib/npwd/config.json
+++ b/lib/npwd/config.json
@@ -17,7 +17,7 @@
     "phoneNumberColumn": "phone_number"
   },
   "images": {
-    "url": "https://images.gorp.link/",
+    "url": "https://images.soz.zerator.com/",
     "type": "imgur",
     "imageEncoding": "jpg",
     "contentType": "multipart/form-data",
