--- a/modules-prod.cfg
+++ b/modules-prod.cfg
@@ -33,8 +33,7 @@ start soz-vehicle
 start soz-animations
 start soz-weather
 start soz-shops
-
-start npwd
+start soz-phone
 
 # Mapping
 start bob74
