--- a/modules-prod.cfg
+++ b/modules-prod.cfg
@@ -20,6 +20,7 @@ start soz-monitor
 # Qbcore
 start qb-core
 start cui_character
+start qb-target
 
 # SOZ
 start soz-character
@@ -28,12 +29,14 @@ start soz-personal-menu
 start soz-inventory
 start soz-bank
 start soz-map
-start soz-extras
+start soz-core
 start soz-vehicle
 start soz-animations
 start soz-weather
 start soz-shops
 start soz-phone
+start soz-admin
+start soz-jobs
 
 # Mapping
 start bob74
