--- a/modules-prod.cfg
+++ b/modules-prod.cfg
@@ -36,6 +36,7 @@ start soz-weather
 start soz-shops
 start soz-phone
 start qb-lockpick
+start qb-vehiclefailure
 start chat-theme-soz
 start soz-admin
 start soz-jobs
