feat(talk): link soz-talk ui to soz-voip
Former-commit-id: 18e2e9584caa162c8d883d52ef0356427e495db6

--- a/resources/[soz]/soz-talk/ui/package.json
+++ b/resources/[soz]/soz-talk/ui/package.json
@@ -9,8 +9,7 @@
   },
   "dependencies": {
     "preact": "^10.3.2",
-    "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1"
+    "preact-render-to-string": "^5.1.4"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
