--- a/resources/[soz]/soz-talk/ui/tsconfig.json
+++ b/resources/[soz]/soz-talk/ui/tsconfig.json
@@ -25,8 +25,8 @@
             "@components/*": [
                 "./src/components/*"
             ],
-            "@routes/*": [
-                "./src/routes/*"
+            "@assets/*": [
+                "./src/assets/*"
             ]
         }
     },
