Change resource name on server config
Former-commit-id: b1443c2942aa0aecd01ba623bd64e5f93ce4a77c

--- a/modules-prod.cfg
+++ b/modules-prod.cfg
@@ -36,7 +36,7 @@ start soz-shops
 start soz-phone
 start qb-lockpick
 start chat-theme-soz
-start soz-driving-license
+start soz-driving-school
 
 # Mapping
 start bob74
