--- a/local.cfg
+++ b/local.cfg
@@ -15,3 +15,11 @@ sv_maxclients 16
 set mysql_connection_string "mysql://soz:soz@soz_database/soz?charset=utf8mb4"
 set mysql_slow_query_warning 150
 set mysql_debug true
+
+set sv_endpoints "localhost:30120"
+set sv_forceIndirectListing true
+set sv_listingHostOverride "fivem.soz.test"
+set sv_proxyIPPranges "172.20.0.0/16"
+set adhesive_cdnKey "randomLocalSecretOrNot"
+
+fileserver_add ".*" "http://fivem.soz.test/files"
