feat(voip): refactor voip and implement dual radio channel
Former-commit-id: a27f1e3991db590dd9bb76944dd1732f9d368728

--- a/server.cfg
+++ b/server.cfg
@@ -12,7 +12,8 @@ exec env.cfg
 
 # Voice config
 setr voice_enableRadioAnim 1
-setr voice_enableSubmix 1
+setr voice_useNativeAudio 1
+setr voice_useSendingRangeOnly 1
 
 # Load modules
 exec modules.cfg
