--- a/lib/npwd/phone/package.json
+++ b/lib/npwd/phone/package.json
@@ -14,6 +14,7 @@
     "emoji-mart": "^3.0.1",
     "enzyme": "^3.11.0",
     "fivem-nui-react-lib": "^2.2.8",
+    "history": "^5.3.0",
     "howler": "^2.2.1",
     "i18next": "^20.6.1",
     "jsonschema": "^1.4.0",
