--- a/resources/[soz]/soz-phone/config.json
+++ b/resources/[soz]/soz-phone/config.json
@@ -17,7 +17,7 @@
     "phoneNumberColumn": "phone_number"
   },
   "images": {
-    "url": "https://images.gorp.link/",
+    "url": "https://images.soz.zerator.com/",
     "type": "imgur",
     "imageEncoding": "jpg",
     "contentType": "multipart/form-data",
