--- a/resources/[soz]/soz-talk/ui/package.json
+++ b/resources/[soz]/soz-talk/ui/package.json
@@ -12,6 +12,7 @@
     "preact-render-to-string": "^5.1.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.8",
     "@preact/preset-vite": "^2.1.5",
     "@types/node": "^17.0.18",
     "typescript": "^4.5.4",
