Hotfix config for prod and test
Former-commit-id: bc456b72bf3865cf5e05674f5ac722d615884ac2

--- a/modules.cfg
+++ b/modules.cfg
@@ -1,26 +1,10 @@
-# PRODUCTION
-# Requirements
-start [default]
-start [lib]
+# Use test settings
+exec modules-test.cfg
 
-# Mysql
-start oxmysql
-start mysql-migration
-
-# Tooling
-start soz-afk
-start soz-monitor
-
-# SOZ
-start [qb]
-start [soz]
-
+# Dev specific settings under this line
 # Mapping
-start [mapping-prod]
+start [mapping-dev]
 
 # Vehicles
-start [vehicles-prod]
+start [vehicles-dev]
 
-# Dev specific config, only load on dev env
-# Exec test and prod modules (test load prod)
-exec modules-dev.cfg
