Add migration, remove cui character, finish shop config sample, rename players table
Former-commit-id: a4be6b00fef3d66ce14b4e871e736926c6e906a4

--- a/lib/npwd/config.json
+++ b/lib/npwd/config.json
@@ -10,7 +10,7 @@
   },
   "database": {
     "useIdentifierPrefix": false,
-    "playerTable": "players",
+    "playerTable": "player",
     "identifierColumn": "citizenid",
     "identifierType": "license",
     "profileQueries": true,
