--- a/resources/[soz]/soz-phone/config.json
+++ b/resources/[soz]/soz-phone/config.json
@@ -10,7 +10,7 @@
   },
   "database": {
     "useIdentifierPrefix": false,
-    "playerTable": "players",
+    "playerTable": "player",
     "identifierColumn": "citizenid",
     "identifierType": "license",
     "profileQueries": true,
