--- a/resources/[soz]/soz-phone/config.json
+++ b/resources/[soz]/soz-phone/config.json
@@ -26,8 +26,8 @@
     "returnedDataIndexes": ["data", "link"]
   },
   "debug": {
-    "level": "info",
-    "enabled": false,
+    "level": "debug",
+    "enabled": true,
     "sentryEnabled": false
   }
 }
