--- a/lib/npwd/phone/package.json
+++ b/lib/npwd/phone/package.json
@@ -9,6 +9,7 @@
     "@citizenfx/three": "^0.100.0",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
+    "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
     "dompurify": "^2.3.3",
     "emoji-mart": "^3.0.1",
