feat(hud): add notification style
Former-commit-id: 0468e18b3dba5ae5211dc89cfb0254373543a8fe

--- a/resources/[soz]/soz-hud/ui/package.json
+++ b/resources/[soz]/soz-hud/ui/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "preact": "^10.3.2",
     "preact-render-to-string": "^5.1.4"
   },
