Use permission, account and char info from soz_api database
Former-commit-id: ea556a6898720899138b300993124a394080ddc1

--- a/local.cfg
+++ b/local.cfg
@@ -16,6 +16,12 @@ set mysql_connection_string "mysql://root:root@soz_database/soz_fivem?charset=ut
 set mysql_slow_query_warning 150
 set mysql_debug true
 
+# Allow anonymous players to join
+set soz_allow_anonymous_login true
+
+# default role when player is anonymous
+set soz_anonymous_default_role admin
+
 # set sv_endpoints "localhost:30120"
 # set sv_forceIndirectListing true
 # set sv_listingHostOverride "fivem.soz.test"
