--- a/local.cfg
+++ b/local.cfg
@@ -22,6 +22,9 @@ set soz_allow_anonymous_login true
 # default role when player is anonymous
 set soz_anonymous_default_role admin
 
+# logo
+load_server_icon "logo.png"
+
 # set sv_endpoints "localhost:30120"
 # set sv_forceIndirectListing true
 # set sv_listingHostOverride "fivem.soz.test"
