feat(core): allow disabling steam auth
Former-commit-id: 4ba49bdfc6bb8768bced16eb4b9effc53eb0ecf4

--- a/local.cfg
+++ b/local.cfg
@@ -18,6 +18,7 @@ set mysql_debug true
 
 # Allow anonymous players to join
 set soz_allow_anonymous_login true
+set soz_disable_steam_credential true
 
 # default role when player is anonymous
 set soz_anonymous_default_role admin
