feat(voip): update convar for 3d audio
Former-commit-id: 90c321daea0176ca262544c70b2fe1d5af2ffff8

--- a/server.cfg
+++ b/server.cfg
@@ -11,9 +11,9 @@ exec local.cfg
 exec env.cfg
 
 # Voice config
-setr voice_enableRadioAnim 1
-setr voice_useNativeAudio 1
-setr voice_useSendingRangeOnly 1
+setr voice_useNativeAudio true
+setr voice_use3dAudio true
+setr voice_useSendingRangeOnly true
 
 # Load modules
 exec modules.cfg
