--- a/resources/[soz]/soz-hud/ui/package.json
+++ b/resources/[soz]/soz-hud/ui/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "ui",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "classnames": "^2.3.1",
-    "preact": "^10.3.2",
-    "preact-render-to-string": "^5.1.4"
-  },
-  "devDependencies": {
-    "@preact/preset-vite": "^2.1.5",
-    "@types/node": "^17.0.18",
-    "typescript": "^4.5.4",
-    "vite": "^2.8.0"
-  }
+    "name": "ui",
+    "private": true,
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "classnames": "^2.3.1",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.3",
+        "@types/react-dom": "^18.0.0",
+        "@vitejs/plugin-react": "^1.3.0",
+        "typescript": "^4.6.3",
+        "vite": "^2.9.1"
+    }
 }
