fix: rename local.cfg to global.cfg and move steam disable feature to env.cfg file
Former-commit-id: 0fa205c29953bf7a2d780de62cfcb3575ffcb100

--- a/server.cfg
+++ b/server.cfg
@@ -7,7 +7,7 @@ sv_enforceGameBuild 2545
 
 # Environment config with specific variables depending where the server is located
 # Copy the `env.cfg-dist` file to `env.cfg` and replace any necessary values
-exec local.cfg
+exec global.cfg
 exec env.cfg
 
 # Voice config
