--- a/resources/[soz]/soz-inventory/ui/package.json
+++ b/resources/[soz]/soz-inventory/ui/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/sortablejs": "^1.10.7",
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.1"
