feat(reboot): add command to force data persistence and stop FiveM
Former-commit-id: 03e25985c9d503921cfedaac9ada561a8213657d

--- a/server.cfg
+++ b/server.cfg
@@ -29,6 +29,8 @@ sets locale "fr-FR"
 # Add system admins
 add_ace group.admin command allow # allow all commands
 add_ace group.admin command.quit deny # but don't allow quit
+add_ace resource.soz-reboot command.quit allow
+
 add_principal identifier.fivem:1 group.admin # add the admin to the group
 
 add_principal identifier.license:dd4b67c37f21ceea7a5907d2b87f932e8d7466ff group.admin #DarkEagl
