Allow player to get a jwt token for soz api without login
Former-commit-id: 9ec2b1b42695bc13311468823d350f6d1b810da0

--- a/global.cfg
+++ b/global.cfg
@@ -25,6 +25,11 @@ set soz_anonymous_default_role admin
 # logo
 load_server_icon "logo.png"
 
+# soz api
+set soz_api_endpoint "http://api:3000"
+set soz_api_username "admin"
+set soz_api_password "admin"
+
 # set sv_endpoints "localhost:30120"
 # set sv_forceIndirectListing true
 # set sv_listingHostOverride "fivem.soz.test"
