feat(phone): add phone camera picture persistence
Former-commit-id: ba3759b4ebf5809815bae0d56cc771313fd697c0

--- a/global.cfg
+++ b/global.cfg
@@ -25,6 +25,7 @@ set soz_anonymous_default_role admin
 # logo
 load_server_icon "logo.png"
 
+setr soz_public_endpoint "http://soz.test"
 # soz api
 set soz_api_endpoint "http://api:3000"
 set soz_api_username "admin"
