--- a/global.cfg
+++ b/global.cfg
@@ -26,6 +26,7 @@ set soz_anonymous_default_role admin
 load_server_icon "logo.png"
 
 setr soz_public_endpoint "http://soz.test"
+setr soz_public_api_endpoint "http://api.soz.test"
 # soz api
 set soz_api_endpoint "http://api:3000"
 set soz_api_username "admin"
