--- a/resources/[soz]/soz-talk/ui/package.json
+++ b/resources/[soz]/soz-talk/ui/package.json
@@ -8,13 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.3.2",
-    "preact-render-to-string": "^5.1.4"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@babel/core": "^7.17.8",
-    "@preact/preset-vite": "^2.1.5",
-    "@types/node": "^17.0.18",
+    "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
