--- a/resources/[soz]/soz-talk/ui/package.json
+++ b/resources/[soz]/soz-talk/ui/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.30.0",
+    "react-number-format": "^4.9.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.8",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@babel/core": "^7.17.8",
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
